Adding Passwords view - Part 3

--- a/GUI/Views/Controls/AccountView.xaml
+++ b/GUI/Views/Controls/AccountView.xaml
@@ -119,6 +119,7 @@
                                                    Background="Transparent"/>
                                             <local:VisiblePasswordBox Grid.Column="1"
                                                                       MinWidth="200"
+                                                                      ReadOnly="True"
                                                                       Loaded="_passwords_VPB_Loaded"/>
                                             <Button Grid.Column="2"
                                                     Content="▣"/>
