--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -17,11 +17,13 @@
                      Name="_passwordBox"
                      PasswordChar="¤"
                      FontFamily="Courier New"
+                     IsEnabled="{Binding IsEnabled}"
                      Visibility="{Binding PasswordVisibility}"/>
         <TextBox Margin="1"
                  Grid.Column="0"
                  Visibility="{Binding TextVisibility}"
                  FontFamily="Courier New"
+                 IsReadOnly="True"
                  Text="{Binding Password}"/>
         <Button Margin="1"
                 Grid.Column="1"
