Adding Passwords view - Part 4

--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -17,11 +17,13 @@
                      Name="_passwordBox"
                      PasswordChar="¤"
                      FontFamily="Courier New"
+                     Background="{Binding Background}"
                      IsEnabled="{Binding IsEnabled}"
                      Visibility="{Binding PasswordVisibility}"/>
         <TextBox Margin="1"
                  Grid.Column="0"
                  Visibility="{Binding TextVisibility}"
+                 Background="{Binding Background}"
                  FontFamily="Courier New"
                  IsReadOnly="True"
                  Text="{Binding Password}"/>
