Inert Password feature

--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -33,12 +33,14 @@
                 <MenuItem Height="40"
                           HorizontalAlignment="Right">
                     <MenuItem.Header>
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal"
+                                    Background="Transparent">
                             <CheckBox IsChecked="{Binding CheckIfLeaked}">
                                 Check if leaked
                             </CheckBox>
                             <Label Grid.Column="0"
-                                   Margin="0">
+                                   Margin="0"
+                                   Background="Transparent">
                                 Length :
                             </Label>
                             <TextBox Grid.Column="1"
