--- a/GUI/Views/Controls/AccountView.xaml
+++ b/GUI/Views/Controls/AccountView.xaml
@@ -32,8 +32,8 @@
                       Grid.Column="0"
                       Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
                     <GroupBox Header="Identifiants"
                               Grid.Column="0">
@@ -57,8 +57,9 @@
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBox MinWidth="250"
-                                             Background="{Binding IdentifiantBackground}"
-                                             Text="{Binding Identifiant, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                                 Background="{Binding IdentifiantBackground}"
+                                                 FontFamily="Courier New"
+                                                 Text="{Binding Identifiant, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                             </ListBox>
@@ -112,7 +113,7 @@
                                 Content="▣"/>
                             <ListBox Grid.Row="1"
                                  Grid.Column="0"
-                                 Grid.ColumnSpan="2"
+                                 Grid.ColumnSpan="3"
                                  Name="_passwords_LB">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
@@ -127,7 +128,8 @@
                                                    Content="{Binding UpdateDate}"
                                                    Background="Transparent"/>
                                             <local:VisiblePasswordBox Grid.Column="1"
-                                                                      MinWidth="200"
+                                                                      Margin="5"
+                                                                      MinWidth="230"
                                                                       ReadOnly="True"
                                                                       Loaded="_passwords_VPB_Loaded"/>
                                             <Button Grid.Column="2"
