--- a/GUI/Views/Controls/ServiceView.xaml
+++ b/GUI/Views/Controls/ServiceView.xaml
@@ -24,12 +24,14 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Label Grid.Row="0"
                            Grid.Column="0"
                            Content="Service name : "/>
                     <TextBox Grid.Row="0"
                              Grid.Column="1"
+                             Grid.ColumnSpan="2"
                              Text="{Binding ServiceName, Mode=TwoWay}"
                              Background="{Binding ServiceNameBackground}"/>
                     <Label Grid.Row="1"
@@ -39,11 +41,16 @@
                              Grid.Column="1"
                              Text="{Binding Url, Mode=TwoWay}"
                              Background="{Binding UrlBackground}"/>
+                    <Button Grid.Row="1"
+                            Grid.Column="2"
+                            Content="Open"
+                            Click="_openUrl_Button_Click"/>
                     <Label Grid.Row="2"
                            Grid.Column="0"
                            Content="Notes : "/>
                     <TextBox Grid.Row="2"
                              Grid.Column="1"
+                             Grid.ColumnSpan="2"
                              Text="{Binding Notes, Mode=TwoWay}"
                              Background="{Binding NotesBackground}"
                              MaxHeight="75"
