--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -42,7 +42,8 @@
                 <MenuItem Header="_Generate random Password"
                           Click="_generateRandomPassword_MenuItem_Click"/>
                 <MenuItem Header="{Binding ShowWarning}"/>
-                <MenuItem Header="_Show logs"/>
+                <MenuItem Header="_Show logs"
+                          Click="_showLogs_MenuItem_Click"/>
                 <MenuItem Header="_Logout"
                           HorizontalAlignment="Right"
                           Click="_logout_MenuItem_Click"/>
